objects/CustomCategoryTree__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Custom Tree</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LevelOneLabel__c</fullName>
        <label>Level One Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LevelTwoLabel__c</fullName>
        <label>Level Two Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Category Tree</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Category Tree Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Category Trees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>